--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.php" <?php if($page=='home' ) echo 'class="active"' ?>Home</a></li>
-          <li><a href="about.php" <?php if($page=='about' ) echo 'class="active"' ?>About Us</a></li>
-          <li><a href="projects.php" <?php if($page=='gallery' ) echo 'class="active"' ?>Projects</a></li>
-          <li><a href="patientproject.php" <?php if($page=='patient' ) echo 'class="active"' ?>Patient Projects</a>
+          <li><a href="index.html" <?php if($page=='home' ) echo 'class="active"' ?>Home</a></li>
+          <li><a href="about.html" <?php if($page=='about' ) echo 'class="active"' ?>About Us</a></li>
+          <li><a href="projects.html" <?php if($page=='gallery' ) echo 'class="active"' ?>Projects</a></li>
+          <li><a href="patientproject.html" <?php if($page=='patient' ) echo 'class="active"' ?>Patient Projects</a>
           </li>
-          <li><a href="./gallery.php" <?php if($page=='photo' ) echo 'class="active"' ?>Photo Gallery</a></li>
-          <li><a href="event.php" <?php if($page=='event' ) echo 'class="active"' ?>Events</a></li>
-          <li><a href="contact.php" <?php if($page=='contact' ) echo 'class="active"' ?>Contact Us</a></li>
+          <li><a href="./gallery.html" <?php if($page=='photo' ) echo 'class="active"' ?>Photo Gallery</a></li>
+          <li><a href="event.html" <?php if($page=='event' ) echo 'class="active"' ?>Events</a></li>
+          <li><a href="contact.html" <?php if($page=='contact' ) echo 'class="active"' ?>Contact Us</a></li>
         </ul>
       </nav><!-- .navbar -->
 
