--- a/index.html
+++ b/index.html
@@ -44,14 +44,13 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" <?php if($page=='home' ) echo 'class="active"' ?>Home</a></li>
-          <li><a href="about.html" <?php if($page=='about' ) echo 'class="active"' ?>About Us</a></li>
-          <li><a href="projects.html" <?php if($page=='gallery' ) echo 'class="active"' ?>Projects</a></li>
-          <li><a href="patientproject.html" <?php if($page=='patient' ) echo 'class="active"' ?>Patient Projects</a>
-          </li>
-          <li><a href="./gallery.html" <?php if($page=='photo' ) echo 'class="active"' ?>Photo Gallery</a></li>
-          <li><a href="event.html" <?php if($page=='event' ) echo 'class="active"' ?>Events</a></li>
-          <li><a href="contact.html" <?php if($page=='contact' ) echo 'class="active"' ?>Contact Us</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="patientproject.html">Patient Projects</a></li>
+          <li><a href="./gallery.html">Photo Gallery</a></li>
+          <li><a href="event.html">Events</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -458,7 +457,7 @@
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="./image/projects/it_img1.webp" title="it 1" data-gallery="portfolio-gallery-it"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.php" title="More Details" class="details-link"><i
+                  <a href="project-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -472,7 +471,7 @@
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="./image/projects/img8.webp" title="mechanical 1" data-gallery="portfolio-gallery-mechanical"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.php" title="More Details" class="details-link"><i
+                  <a href="project-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -487,7 +486,7 @@
                   <a href="./image/projects/agriculture_img1.webp" title="agriculture 1"
                     data-gallery="portfolio-gallery-agriculture" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.php" title="More Details" class="details-link"><i
+                  <a href="project-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -502,7 +501,7 @@
                   <a href="./image/projects/science_img1.webp" title="agriculture 1"
                     data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.php" title="More Details" class="details-link"><i
+                  <a href="project-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -516,7 +515,7 @@
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="./image/projects/it_img2.webp" title="it 2" data-gallery="portfolio-gallery-it"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.php" title="More Details" class="details-link"><i
+                  <a href="project-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -530,7 +529,7 @@
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                   <a href="./image/projects/img10.webp" title="mechanical 2" data-gallery="portfolio-gallery-mechanical"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="project-details.php" title="More Details" class="details-link"><i
+                  <a href="project-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -542,7 +541,7 @@
 
         </div>
         <div class="button_more1">
-          <a data-aos="fade-more1" data-aos-delay="200" href="http://localhost/idealab/projects.php"
+          <a data-aos="fade-more1" data-aos-delay="200" href="http://localhost/idealab/projects.html"
             class="btn-get-more1">More
             <i class="fa-solid fa-arrow-right"></i>
           </a>
@@ -569,7 +568,7 @@
               <h3>Electric Vehicles Charging Point</h3>
               <p>Efficient EV charging infrastructure for a greener future, promoting
                 sustainable transportation and reducing emissions.</p>
-              <a href="./patient_details.php" class="readmore stretched-link">Learn more <i
+              <a href="./patient_details.html" class="readmore stretched-link">Learn more <i
                   class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -580,7 +579,7 @@
               <h3>Smart Helmet With IoT</h3>
               <p>A smart IoT helmet for enhanced safety, integrating sensors and connectivity
                 for real-time monitoring and alerts.</p>
-              <a href="./patient_details.php" class="readmore stretched-link">Learn more <i
+              <a href="./patient_details.html" class="readmore stretched-link">Learn more <i
                   class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -591,7 +590,7 @@
               <h3>BlockChain Voting System</h3>
               <p>Secure and transparent blockchain-based voting system, ensuring tamper-proof elections and
                 fostering trust in the democratic process.</p>
-              <a href="./patient_details.php" class="readmore stretched-link">Learn more <i
+              <a href="./patient_details.html" class="readmore stretched-link">Learn more <i
                   class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -602,7 +601,7 @@
               <h3>Fingerprint Door Lock</h3>
               <p>Advanced fingerprint door lock, offering biometric security
                 and convenient access control for homes and businesses.</p>
-              <a href="./patient_details.php" class="readmore stretched-link">Learn more <i
+              <a href="./patient_details.html" class="readmore stretched-link">Learn more <i
                   class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -613,7 +612,7 @@
               <h3>Accident Detecting Car</h3>
               <p>Cutting-edge accident-detecting car technology for immediate
                 response and safety enhancement on the road.</p>
-              <a href="./patient_details.php" class="readmore stretched-link">Learn more <i
+              <a href="./patient_details.html" class="readmore stretched-link">Learn more <i
                   class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -624,14 +623,14 @@
               <h3>Smart Dustbin</h3>
               <p>A smart dustbin equipped with sensors for efficient waste management
                 and a cleaner, greener environment.</p>
-              <a href="./patient_details.php" class="readmore stretched-link">Learn more <i
+              <a href="./patient_details.html" class="readmore stretched-link">Learn more <i
                   class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
         </div>
         <div class="button_more1 button_more2">
-          <a data-aos="fade-more1" data-aos-delay="200" href="http://localhost/idealab/patientproject.php"
+          <a data-aos="fade-more1" data-aos-delay="200" href="http://localhost/idealab/patientproject.html"
             class="btn-get-more1">More
             <i class="fa-solid fa-arrow-right"></i>
           </a>
@@ -755,11 +754,11 @@
             <div class="col-lg-2 col-md-3 footer-links">
               <h4>Useful Links</h4>
               <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Project Gallery</a></li>
-                <li><a href="#">Patient Projects</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About us</a></li>
+                <li><a href="./patientproject.html">Patient Projects</a></li>
+                <li><a href="./gallery.html">Project Gallery</a></li>
+                <li><a href="./contact.html">Contact Us</a></li>
               </ul>
             </div><!-- End footer links column-->
 
